fix: mobile width overflow

--- a/index.scss
+++ b/index.scss
@@ -98,6 +98,9 @@ html, body {
 html {
   height:100%
 }
+body {
+  overflow: hidden;
+}
 
 // flex
 
@@ -177,19 +180,19 @@ html {
   "fonts/iconfont.css";
 
 // content
-canvas { position: absolute; left: 0; top: 0; width: 100%; height: 100%;}
+canvas { position: absolute; left: 0; top: 0; max-width: 100%; max-height: 100%;}
 .content { position: relative; z-index: 2; background-color: rgba(255,255,255,0.7);}
 .avatar { width: 100px; height: 100px; margin: 0 auto;
   img { width: 100%; height: 100%; border-radius: 50%;}
 }
 .name { font-family: calligraffitti-regular-webfont; font-size: 26px; font-weight: bold; color: #283039; margin-top: 8px;}
 .bio { font-size: 16px; color: #727682;}
-.light { width: 400px; height: 1px; margin: 16px 0; background-image: -webkit-linear-gradient(bottom, transparent, #d5d5d5, transparent); background-image: linear-gradient(0deg, transparent, #d5d5d5, transparent); background-image: -webkit-linear-gradient(0deg, transparent, #d5d5d5, transparent); }
+.light { width: 80%; max-width: 400px; height: 1px; margin: 16px 0; background-image: -webkit-linear-gradient(bottom, transparent, #d5d5d5, transparent); background-image: linear-gradient(0deg, transparent, #d5d5d5, transparent); background-image: -webkit-linear-gradient(0deg, transparent, #d5d5d5, transparent); }
 .nav {
   li { position: relative;
     a { position: relative; cursor: pointer;}
     &:last-child {
-      a:hover {
+      a:hover, a:active {
         .wechat-img { visibility: visible; transform: translate(0, 0) translateZ(0); }
       }
     }
@@ -201,7 +204,7 @@ canvas { position: absolute; left: 0; top: 0; width: 100%; height: 100%;}
     &:hover { color: #283039;}
   }
 }
-.wechat-img { visibility: hidden; position: absolute; left: 100%; bottom: 0; width: 120px; height: 120px; background-color: #ffffff; box-sizing: border-box; box-shadow: 0 0 8px 4px rgba(0,0,0,0.05); transition: transform 0.2s ease-out; transform: translate(5px, 0) translateZ(0);
+.wechat-img { visibility: hidden; position: absolute; left: 50%; margin-left: -60px; top: -130px; width: 120px; height: 120px; background-color: #ffffff; box-sizing: border-box; box-shadow: 0 0 8px 4px rgba(0,0,0,0.05); transition: transform 0.2s ease-out; transform: translate(0, -5px) translateZ(0);
   img { width: 100%; height: 100%;}
 }
 .button { display: block; width: 100px; border-radius: 20px; margin: 16px auto; border: 1px solid #f0f2f5; color: #283039; font-size: 12px; box-sizing: border-box; cursor: pointer;}
